On branch keyboardSectionHackFest, modified:   aria-practices.html. Editorial corrections made during APG TF call.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3187,7 +3187,7 @@ function detectHiContrast() {
   <h2> Developing a Keyboard Interface</h2>
   <p>
   Unlike native HTML form elements, browsers do not provide keyboard support for graphical user interface (GUI) components that are made accessible with ARIA; authors have to provide the keyboard support in their code.
-  This section describes the principles and methods for making the functionality of a web page that includes ARIA widgets, such as menus and grids,  as wel ass interactive components, such as toolbars and dialogs, operable with a keyboard. 
+  This section describes the principles and methods for making the functionality of a web page that includes ARIA widgets, such as menus and grids,  as well as interactive components, such as toolbars and dialogs, operable with a keyboard. 
   Along with the basics of focus management, this section offers guidance toward the objective of providing experiences to people who rely on a keyboard that are as efficient and enjoyable as the experiences available to others. 
   It covers:
   </p>
@@ -3729,7 +3729,7 @@ And, in user interfaces with too many keyboard shortcuts, the excess shortcuts c
                 It is typically ideal if key assignments do not conflict with keys that are assigned to functions in the user's operating system, browser, or assistive technology.
                     Conflicts can block efficient access to functions that are essential to the user, and a perfect storm of conflicts can trap a user. 
                     At the same time, there are some circumstances where intentional conflicts are useful.
-                    And, Given the vast array of operating system, browser, and assistive technology keys, it is almost impossible to be certain conflicts do not exist.
+                    And, given the vast array of operating system, browser, and assistive technology keys, it is almost impossible to be certain conflicts do not exist.
                     So it is also important to employ strategies that mitigate the impact of conflicts whether they are intentional or unknown. 
                     </p>
                     <p class="note">
@@ -3743,8 +3743,8 @@ And, in user interfaces with too many keyboard shortcuts, the excess shortcuts c
                     </p>
                     <ol>
                     <li>Any modifier keys + any of <kbd>Tab</kbd>, <kbd>Enter</kbd>, <kbd>Space</kbd>, or <kbd>Escape</kbd>. </li>
-                    <li><kbd>Meta</kbd> key + any other single key (There are exceptions, but they can be risky as these keys can change across versions of operating systems) </li>
-                    <li><kbd>Alt</kbd> + a function key </li>
+                    <li><kbd>Meta</kbd> key + any other single key (there are exceptions, but they can be risky as these keys can change across versions of operating systems). </li>
+                    <li><kbd>Alt</kbd> + a function key. </li>
                     </ol>
                     <p>
                     In addition, there are some important application level features that most applications, including browsers, generally support.
@@ -3805,7 +3805,7 @@ And, in user interfaces with too many keyboard shortcuts, the excess shortcuts c
                         <li>There is an efficient, alternative path to the browser function.</li>
                     </ul>
                     <p>For example, consider a save function that is available when the focus is
-                        in an editor. Most browsers use</p>
+                        in an editor. Most browsers use ... to be continued ... </p>
                 </section>
             </section>
       <section id="kbd_shortcuts_exposing">
