--- a/examples/landmarks/HTML5.html
+++ b/examples/landmarks/HTML5.html
@@ -19,15 +19,17 @@
         </div>
         <div class="col-xs-12 col-sm-9 col-md-9 col-lg-10">
           <h1>ARIA Landmarks Example</h1>
+          <p id="inst" class="inst">Visually outline the landmarks and/or headings on the page using the following buttons.</p>
+          <button onclick="showLandmarks(event)" aria-describedby="inst">Show Landmarks</button>
+          <button onclick="showHeadings(event)"  aria-describedby="inst">Show Headings</button>
         </div>
       </header>
       <div class="row">
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
-          <nav aria-labelledby="nav2">
-            <h2 id="nav2" class="sr-only">Main</h2>
+          <nav>
             <ul class="nav nav-pills nav-stacked">
               <li><a href="index.html">Principles</a></li>
-              <li class="active"><a href="HTML5.html">HTML5</a></li>
+              <li class="active"><a href="HTML5.html" aria-current="page">HTML5</a></li>
               <li><a href="banner.html">Banner</a></li>
               <li><a href="complementary.html">Complementary</a></li>
               <li><a href="contentinfo.html">Contentinfo</a></li>
@@ -36,7 +38,7 @@
               <li><a href="navigation.html">Navigation</a></li>
               <li><a href="region.html">Region</a></li>
               <li><a href="search.html">Search</a></li>
-              <li><a href="at.html" aria-label="Assitive Technology">Asst. Tech.</a></li>
+              <li><a href="at.html" aria-label="Assistive Technology">Asst. Tech.</a></li>
               <li><a href="resources.html">Resources</a></li>
             </ul>
           </nav>
@@ -111,24 +113,23 @@
             <p>The following are landmarks defined on the page:</p>
             <ul>
               <li>Banner</li>
-              <li>Complementary(3)</li>
+              <li>Complementary</li>
               <li>Contentinfo</li>
-              <li>Navigation</li>
               <li>Main</li>
+              <li>Navigation</li>
             </ul>
-            <p id="highlight_inst" class="inst">Visually outline the landmarks and/or headings on the page using the following buttons.</p>
-            <button onclick="showLandmarks(event)" aria-describedby="highlight_inst">Show Landmarks</button>
-            <button onclick="showHeadings(event)" aria-describedby="highlight_inst">Show Headings</button>
           </aside>
           <aside aria-labelledby="id3">
             <h2 id="id3">Related W3C Specs</h2>
             <ul>
-              <li><a href="http://www.w3.org/TR/WCAG">WCAG 2.0</a></li>
-              <li><a href="http://www.w3.org/TR/html5">HTML5</a></li>
-              <li><a href="http://www.w3.org/TR/wai-aria">ARIA</a></li>
+              <li><a href="http://www.w3.org/TR/WCAG">WCAG 2.0 Specification</a></li>
+              <li><a href="http://www.w3.org/TR/html5">HTML5 Specification</a></li>
+              <li><a href="http://www.w3.org/TR/wai-aria">ARIA Specification</a></li>
               <li><a href="https://www.w3.org/TR/wai-aria-practices/">ARIA Authoring Practices</a></li>
               <li><a href="https://www.w3.org/TR/accname-aam-1.1/">ARIA Accessible Name Calc</a></li>
               <li><a href="https://www.w3.org/TR/aria-in-html/">ARIA in HTML5</a></li>
+              <li><a href="https://www.w3.org/TR/2016/WD-core-aam-1.1-20160317/">Core Accessibility API Mappings 1.1</a></li>
+              <li><a href="https://www.w3.org/TR/html-aam-1.0/">HTML Accessibility API Mappings 1.0</a></li>
             </ul>
           </aside>
         </div>
@@ -146,7 +147,8 @@
     </div>
     <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>        
     <script type="text/javascript" src="js/bootstrap.min.js"></script>        
-    <script type="text/javascript" src="js/bootstrap-accessibility.min.js"></script>        
+    <script type="text/javascript" src="js/bootstrap-accessibility.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap-accessibility-2.js"></script>       
     <script type="text/javascript" src="js/visua11y.js"></script>        
     <script type="text/javascript" src="js/show.js"></script>        
     <script type="text/javascript" >
@@ -155,7 +157,8 @@
       {
         "settings": {
           "skipTo": {
-            "headings": "h1, h2"
+            "headings": "h1, h2",
+            "attachElement": "header"
           }
         }
       };
