--- a/examples/landmarks/at.html
+++ b/examples/landmarks/at.html
@@ -19,12 +19,14 @@
         </div>
         <div class="col-xs-12 col-sm-9 col-md-9 col-lg-10">
           <h1>ARIA Landmarks Example</h1>
+          <p id="inst" class="inst">Visually outline the landmarks and/or headings on the page using the following buttons.</p>
+          <button onclick="showLandmarks(event)" aria-describedby="inst">Show Landmarks</button>
+          <button onclick="showHeadings(event)"  aria-describedby="inst">Show Headings</button>
         </div>
       </header>
       <div class="row">
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
-          <nav aria-labelledby="nav2">
-            <h2 id="nav2" class="sr-only">Main</h2>
+          <nav>
             <ul class="nav nav-pills nav-stacked">
               <li class="active"><a href="index.html">Principles</a></li>
               <li><a href="HTML5.html">HTML5</a></li>
@@ -36,7 +38,7 @@
               <li><a href="navigation.html">Navigation</a></li>
               <li><a href="region.html">Region</a></li>
               <li><a href="search.html">Search</a></li>
-              <li><a href="at.html" aria-label="Assitive Technology">Asst. Tech.</a></li>
+              <li><a href="at.html" aria-label="Assistive Technology" aria-current="page">Asst. Tech.</a></li>
               <li><a href="resources.html">Resources</a></li>
             </ul>
           </nav>
@@ -51,13 +53,14 @@
             <ul>
               <li><a href="#jaws">JAWS Screen Reader for Windows</a></li>
               <li><a href="#nvda">NVDA Screen Reader for Windows</a></li>
+              <li><a href="#we">Window-Eyes Screen Reader for Windows</a></li>
               <li><a href="#vo">Voice Over Screen Reader for OSX</a></li>
               <li><a href="#orca">ORCA Screen Reader for Linux/Gnome</a></li>
             </ul>
 
             <section aria-labelledby="jaws">
               <h2 id="jaws">JAWS Screen Reader for Windows</h2>
-              <p>The following commands are available in JAWS Screen reader for navigating landmarks:</p>
+              <p>The following commands are available in the JAWS screen reader (since version 15) for navigating landmarks:</p>
 
               <table class="table table-striped table-hover" aria-labelledby="jaws">
 
@@ -93,9 +96,9 @@
             
             </section>
 
-            <section aria-labelledby="nvda">
+            <section aria-labelledby="ndva">
             <h2 id="nvda">NVDA Screen Reader for Windows</h2>
-               <p>The following commands are available in NVDA Screen reader for navigating landmarks:</p>
+               <p>The following commands are available in NVDA screen reader (since version 2014.2) for navigating landmarks:</p>
 
               <table class="table table-striped table-hover" aria-labelledby="nvda">
 
@@ -125,9 +128,39 @@
                 <p><img src="images/landmarks-nvda.png" alt="Screen shot of list of landmarks in voice over" width="80%"></p>
             </section>
 
+            <section aria-labelledby="we">
+            <h2 id="we">Window-Eyes Screen Reader for Windows</h2>
+               <p>The following commands are available in Window-Eyes screen reader (since version 8.4) for navigating landmarks:</p>
+
+              <table class="table table-striped table-hover" aria-labelledby="we">
+
+                <thead>
+                  <tr>
+                    <th>Command</th>
+                    <th>Action</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>;</td>
+                    <td>Go to next landmark</td>
+                  </tr>
+                  <tr>
+                    <td>Shift+;</td>
+                    <td>Go to previous landmark</td>
+                  </tr>
+                  <tr>
+                    <td>Insert+Tab, Alt+K</td>
+                    <td>List of landmarks</td>
+                  </tr>
+                </tbody>
+                
+              </table>         
+            </section>
+
             <section aria-labelledby="vo">
-            <h2 id="vo">Voice  Over Sreen Reader for OS X</h2>
-               <p>The following commands are available in Voice Over Screen reader for navigating landmarks:</p>
+            <h2 id="vo">Voice Over Screen Reader for OS X (Mac OS)</h2>
+               <p>The following commands are available in Voice Over screen reader for OS X El Capitan (10.11) for navigating landmarks:</p>
               <table class="table table-striped table-hover" aria-labelledby="vo">
 
                 <thead>
@@ -195,25 +228,23 @@
             <p>The following are landmarks defined on the page:</p>
             <ul>
               <li>Banner</li>
-              <li>Complementary(3)</li>
+              <li>Complementary</li>
               <li>Contentinfo</li>
               <li>Navigation</li>
               <li>Main</li>
-              <li>Region(4)</li>
             </ul>
-            <p id="highlight_inst" class="inst">Visually outline the landmarks and/or headings on the page using the following buttons.</p>
-            <button onclick="showLandmarks(event)" aria-describedby="highlight_inst">Show Landmarks</button>
-            <button onclick="showHeadings(event)" aria-describedby="highlight_inst">Show Headings</button>
           </aside>
           <aside aria-labelledby="id3">
             <h2 id="id3">Related W3C Specs</h2>
             <ul>
-              <li><a href="http://www.w3.org/TR/WCAG">WCAG 2.0</a></li>
-              <li><a href="http://www.w3.org/TR/html5">HTML5</a></li>
-              <li><a href="http://www.w3.org/TR/wai-aria">ARIA</a></li>
+              <li><a href="http://www.w3.org/TR/WCAG">WCAG 2.0 Specification</a></li>
+              <li><a href="http://www.w3.org/TR/html5">HTML5 Specification</a></li>
+              <li><a href="http://www.w3.org/TR/wai-aria">ARIA Specification</a></li>
               <li><a href="https://www.w3.org/TR/wai-aria-practices/">ARIA Authoring Practices</a></li>
               <li><a href="https://www.w3.org/TR/accname-aam-1.1/">ARIA Accessible Name Calc</a></li>
               <li><a href="https://www.w3.org/TR/aria-in-html/">ARIA in HTML5</a></li>
+              <li><a href="https://www.w3.org/TR/2016/WD-core-aam-1.1-20160317/">Core Accessibility API Mappings 1.1</a></li>
+              <li><a href="https://www.w3.org/TR/html-aam-1.0/">HTML Accessibility API Mappings 1.0</a></li>
             </ul>
           </aside>
         </div>
@@ -232,6 +263,7 @@
     <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>        
     <script type="text/javascript" src="js/bootstrap.min.js"></script>        
     <script type="text/javascript" src="js/bootstrap-accessibility.min.js"></script>        
+    <script type="text/javascript" src="js/bootstrap-accessibility-2.js"></script>        
     <script type="text/javascript" src="js/visua11y.js"></script>        
     <script type="text/javascript" src="js/show.js"></script>        
     <script type="text/javascript" >
@@ -240,7 +272,8 @@
       {
         "settings": {
           "skipTo": {
-            "headings": "h1, h2"
+            "headings": "h1, h2",
+            "attachElement": "header"
           }
         }
       };
