--- a/examples/landmarks/index.html
+++ b/examples/landmarks/index.html
@@ -19,14 +19,16 @@
         </div>
         <div class="col-xs-12 col-sm-9 col-md-9 col-lg-10">
           <h1>ARIA Landmarks Example</h1>
+          <p id="inst" class="inst">Visually outline the landmarks and/or headings on the page using the following buttons.</p>
+          <button onclick="showLandmarks(event)" aria-describedby="inst">Show Landmarks</button>
+          <button onclick="showHeadings(event)"  aria-describedby="inst">Show Headings</button>
         </div>
       </header>
       <div class="row">
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
-          <nav aria-labelledby="nav2">
-            <h2 id="nav2" class="sr-only">Main</h2>
+          <nav>
             <ul class="nav nav-pills nav-stacked">
-              <li class="active"><a href="index.html">Principles</a></li>
+              <li class="active"><a href="index.html" aria-current="page">Principles</a></li>
               <li><a href="HTML5.html">HTML5</a></li>
               <li><a href="banner.html">Banner</a></li>
               <li><a href="complementary.html">Complementary</a></li>
@@ -36,7 +38,7 @@
               <li><a href="navigation.html">Navigation</a></li>
               <li><a href="region.html">Region</a></li>
               <li><a href="search.html">Search</a></li>
-              <li><a href="at.html" aria-label="Assitive Technology">Asst. Tech.</a></li>
+              <li><a href="at.html" aria-label="Assistive Technology">Asst. Tech.</a></li>
               <li><a href="resources.html">Resources</a></li>
             </ul>
           </nav>
@@ -52,13 +54,14 @@
               using HTML5 sectioning elements and ARIA landmark roles.
             </p>
             <p>Due to the complexity of todays web content, if using landmarks, <strong>all content</strong> should reside in a semantically meaningful landmark in order that content is not missed by the user.</p>
+
             <p style="font-weight: bold">Step 1: Identify the logical structure</p>
             <ul>
               <li>
                 Break the page into perceivable areas called "areas". 
               </li>
               <li>   
-                Typically designers indicate areas visually using alignment and spacing of content.
+                Typically, designers indicate areas visually using alignment and spacing of content.
               </li>
               <li>
                 Regions can be further defined into logical sub-areas as needed. 
@@ -67,6 +70,7 @@
                 An example of a sub-area is a portlet in a portal application.   
               </li>
             </ul>
+            
             <p style="font-weight: bold">Step 2: Assign landmark roles to each area</p>
             <ul>
               <li>
@@ -79,19 +83,20 @@
                 Landmark roles can be nested to identify parent/child relationships of the information being presented.
               </li>
             </ul>
+            
             <p style="font-weight: bold">Step 3: Label each area</p>
             <ul>
               <li>
                 If a specific landmark role is used more than once on a web page, it should have a unique label.
               </li>
               <li>
-                If a area begins with a heading element (e.g. <code>h1-h6</code>) it can be used as the label for the area using <code>aria-labelledby</code> attribute.
+                If a area begins with a heading element (e.g. <code>h1-h6</code>), it can be used as the label for the area using <code>aria-labelledby</code> attribute.
               </li>
               <li>
                 If a area does not have a heading element, provide a label using the <code>aria-label</code> attribute.
               </li>
               <li>
-                Do not use the landmark role as part of the label.  
+                Avoid using the landmark role as part of the label.  
                 For example, a navigation landmark with a label "Site Navigation" will be announced by a screen reader as "Site Navigation Navigation".  
                 The label should simply be "Site".
               </li>
@@ -104,24 +109,23 @@
             <p>The following are landmarks defined on the page:</p>
             <ul>
               <li>Banner</li>
-              <li>Complementary(3)</li>
+              <li>Complementary</li>
               <li>Contentinfo</li>
-              <li>Navigation</li>
               <li>Main</li>
+              <li>Navigation</li>
             </ul>
-            <p id="highlight_inst" class="inst">Visually outline the landmarks and/or headings on the page using the following buttons.</p>
-            <button onclick="showLandmarks(event)" aria-describedby="highlight_inst">Show Landmarks</button>
-            <button onclick="showHeadings(event)" aria-describedby="highlight_inst">Show Headings</button>
           </aside>
           <aside aria-labelledby="id3">
             <h2 id="id3">Related W3C Specs</h2>
             <ul>
-              <li><a href="http://www.w3.org/TR/WCAG">WCAG 2.0</a></li>
-              <li><a href="http://www.w3.org/TR/html5">HTML5</a></li>
-              <li><a href="http://www.w3.org/TR/wai-aria">ARIA</a></li>
+              <li><a href="http://www.w3.org/TR/WCAG">WCAG 2.0 Specification</a></li>
+              <li><a href="http://www.w3.org/TR/html5">HTML5 Specification</a></li>
+              <li><a href="http://www.w3.org/TR/wai-aria">ARIA Specification</a></li>
               <li><a href="https://www.w3.org/TR/wai-aria-practices/">ARIA Authoring Practices</a></li>
               <li><a href="https://www.w3.org/TR/accname-aam-1.1/">ARIA Accessible Name Calc</a></li>
               <li><a href="https://www.w3.org/TR/aria-in-html/">ARIA in HTML5</a></li>
+              <li><a href="https://www.w3.org/TR/2016/WD-core-aam-1.1-20160317/">Core Accessibility API Mappings 1.1</a></li>
+              <li><a href="https://www.w3.org/TR/html-aam-1.0/">HTML Accessibility API Mappings 1.0</a></li>
             </ul>
           </aside>
         </div>
@@ -139,7 +143,8 @@
     </div>
     <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>        
     <script type="text/javascript" src="js/bootstrap.min.js"></script>        
-    <script type="text/javascript" src="js/bootstrap-accessibility.min.js"></script>        
+    <script type="text/javascript" src="js/bootstrap-accessibility.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap-accessibility-2.js"></script>       
     <script type="text/javascript" src="js/visua11y.js"></script>        
     <script type="text/javascript" src="js/show.js"></script>        
     <script type="text/javascript" >
@@ -148,7 +153,8 @@
       {
         "settings": {
           "skipTo": {
-            "headings": "h1, h2"
+            "headings": "h1, h2",
+            "attachElement": "header"
           }
         }
       };
