--- a/examples/landmarks/resources.html
+++ b/examples/landmarks/resources.html
@@ -20,12 +20,14 @@
                 </div> 
                 <div class="col-xs-12 col-sm-9 col-md-9 col-lg-10">
                   <h1>ARIA Landmarks Example</h1>
+                  <p id="inst" class="inst">Visually outline the landmarks and/or headings on the page using the following buttons.</p>
+                  <button onclick="showLandmarks(event)" aria-describedby="inst">Show Landmarks</button>
+                  <button onclick="showHeadings(event)"  aria-describedby="inst">Show Headings</button>
                 </div>
             </header>
             <div class="row">
                  <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
-                    <nav aria-labelledby="nav2">
-                        <h2 id="nav2" class="sr-only">Main</h2>
+                    <nav>
                         <ul class="nav nav-pills nav-stacked">
                             <li><a href="index.html">Principles</a></li>
                             <li><a href="HTML5.html">HTML5</a></li>
@@ -37,8 +39,8 @@
                             <li><a href="navigation.html">Navigation</a></li>
                             <li><a href="region.html">Region</a></li>
                             <li><a href="search.html">Search</a></li>
-                            <li><a href="at.html" aria-label="Assitive Technology">Asst. Tech.</a></li>
-                            <li class="active"><a href="resources.html">Resources</a></li>
+                            <li><a href="at.html" aria-label="Assistive Technology">Asst. Tech.</a></li>
+                            <li class="active"><a href="resources.html" aria-current="page">Resources</a></li>
                         </ul>
                     </nav>
                 </div>    
@@ -47,8 +49,8 @@
                     <main>
                         <h1>ARIA Landmark Resources</h1>
 
-                        <section aria-labelledby="id1">
-                          <h2 id="id1">Read More</h2>
+                        <section>
+                          <h2>Read More</h2>
                           <ul>    
                             <li><a href="https://www.w3.org/TR/WCAG20-TECHS/aria#ARIA11">ARIA11: Using ARIA landmarks to identify regions of a page</a> (WCAG 2.0 Technique)</li>
                             <li><a href="https://www.w3.org/TR/WCAG20-TECHS/aria#ARIA20">ARIA20: Using the region role to identify a region of the page</a> (WCAG 2.0 Technique)</li>
@@ -60,13 +62,15 @@
                           </ul>
                         </section>
 
-                        <section aria-labelledby="id2">
-                          <h2 id="id2">Tools</h2>
+                        <section>
+                          <h2>Tools</h2>
 
                           <ul>
-                            <li><a href="http://accessibility-bookmarklets.org/">Accessibility Bookmarklets</a></li>
+                            <li><a href="http://accessibility-bookmarklets.org/">Accessibility Bookmarklets: Landmark Bookmarklet</a></li>
                             <li><a href="http://whatsock.com/training/matrices/visual-aria.htm">The Visual ARIA Bookmarklet</a></li>
                             <li><a href="http://paypal.github.io/skipto/">SkipTo, version 2.0</a> (PayPal)</li>
+                            <li><a href="http://ainspector.github.io/">AInspector Sidebar for Firefox</a> (Landmark Rule Category)</li>
+                            <li><a href="http://fae.disability.illinois.edu/">Functional Accessibility Evaluator 2.0</a> (Landmark Rule Category)</li>
                           </ul>
 
                         </section>  
@@ -82,26 +86,24 @@
                       <p>The following are landmarks defined on the page:</p>
                       <ul>
                         <li>Banner</li>
-                        <li>Navigation</li>
-                        <li>Complementary(3)</li>
-                        <li>Main</li>
+                        <li>Complementary</li>
                         <li>Contentinfo</li>
+                        <li>Main</li>
+                        <li>Navigation</li>
                       </ul>
-                      <p id="highlight_inst" class="inst">Visually outline the landmarks and/or headings on the page using the following buttons.</p>
-                      <button onclick="showLandmarks(event)" aria-describedby="highlight_inst">Show Landmarks</button>
-                      <button onclick="showHeadings(event)" aria-describedby="highlight_inst">Show Headings</button>
-                      
                     </aside>
 
                     <aside aria-labelledby="id3">
                       <h2 id="id3">Related W3C Specs</h2>
                       <ul>
-                        <li><a href="http://www.w3.org/TR/WCAG">WCAG 2.0</a></li>
-                        <li><a href="http://www.w3.org/TR/html5">HTML5</a></li>
-                        <li><a href="http://www.w3.org/TR/wai-aria">ARIA</a></li>
+                        <li><a href="http://www.w3.org/TR/WCAG">WCAG 2.0 Specification</a></li>
+                        <li><a href="http://www.w3.org/TR/html5">HTML5 Specification</a></li>
+                        <li><a href="http://www.w3.org/TR/wai-aria">ARIA Specification</a></li>
                         <li><a href="https://www.w3.org/TR/wai-aria-practices/">ARIA Authoring Practices</a></li>
                         <li><a href="https://www.w3.org/TR/accname-aam-1.1/">ARIA Accessible Name Calc</a></li>
                         <li><a href="https://www.w3.org/TR/aria-in-html/">ARIA in HTML5</a></li>
+                        <li><a href="https://www.w3.org/TR/2016/WD-core-aam-1.1-20160317/">Core Accessibility API Mappings 1.1</a></li>
+                        <li><a href="https://www.w3.org/TR/html-aam-1.0/">HTML Accessibility API Mappings 1.0</a></li>
                       </ul>
                     </aside>
 
@@ -124,7 +126,8 @@
         
         <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>        
         <script type="text/javascript" src="js/bootstrap.min.js"></script>        
-        <script type="text/javascript" src="js/bootstrap-accessibility.min.js"></script>        
+        <script type="text/javascript" src="js/bootstrap-accessibility.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap-accessibility-2.js"></script>       
         <script type="text/javascript" src="js/visua11y.js"></script>        
         <script type="text/javascript" src="js/show.js"></script>        
 
@@ -135,7 +138,8 @@
             {
               "settings": {
                 "skipTo": {
-                  "headings": "h1, h2"
+                  "headings": "h1, h2",
+                  "attachElement": "header"
                 }
               }
             };
