--- a/examples/landmarks/search.html
+++ b/examples/landmarks/search.html
@@ -19,12 +19,14 @@
         </div>
         <div class="col-xs-12 col-sm-9 col-md-9 col-lg-10">
           <h1>ARIA Landmarks Example</h1>
+          <p id="inst" class="inst">Visually outline the landmarks and/or headings on the page using the following buttons.</p>
+          <button onclick="showLandmarks(event)" aria-describedby="inst">Show Landmarks</button>
+          <button onclick="showHeadings(event)"  aria-describedby="inst">Show Headings</button>
         </div>
       </header>
       <div class="row">
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
-          <nav aria-labelledby="nav2">
-            <h2 id="nav2" class="sr-only">Main</h2>
+          <nav>
             <ul class="nav nav-pills nav-stacked">
               <li><a href="index.html">Principles</a></li>
               <li><a href="HTML5.html">HTML5</a></li>
@@ -35,8 +37,8 @@
               <li><a href="main.html">Main</a></li>
               <li><a href="navigation.html">Navigation</a></li>
               <li><a href="region.html">Region</a></li>
-              <li class="active"><a href="search.html">Search</a></li>
-              <li><a href="at.html" aria-label="Assitive Technology">Asst. Tech.</a></li>
+              <li class="active"><a href="search.html" aria-current="page">Search</a></li>
+              <li><a href="at.html" aria-label="Assistive Technology">Asst. Tech.</a></li>
               <li><a href="resources.html">Resources</a></li>
             </ul>
           </nav>
@@ -54,34 +56,41 @@
               <li>Use the <code>search</code> landmark instead of the <code>form</code> landmark when the form is used for search functionality.</li>
               <li>If a page includes more than one <code>search</code> landmark, each should have a unique label.</li>
             </ul>
-            <div>
+            <section aria-label="Coding Techniques">
               <ul class="nav nav-tabs" role="tablist">
-                <li class="active"><a href="#aria-techniques" aria-controls="aria-techniques" role="tab" data-toggle="tab">ARIA Techniques</a></li>
-                <li><a href="#html5-techniques" aria-controls="html5-techniques" role="tab" data-toggle="tab">HTML5 Techniques</a></li>
+                <li class="active"><a id="tab1" href="#tabpanel1" aria-controls="tabpanel1" role="tab" data-toggle="tab">ARIA Techniques</a></li>
+                <li><a id="tab2" href="#tabpanel2" aria-controls="tabpanel2" role="tab" data-toggle="tab">HTML5 Techniques</a></li>
               </ul>
               <div class="tab-content">
-                <div role="tabpanel" class="tab-pane active" id="aria-techniques">
+                <div id="tabpanel1" aria-labelledby="tab1" role="tabpanel" class="tab-pane active">
                   <p>A <code>role="search"</code> attribute is used to define a <code>search</code> landmark.</p>
                    <h3>ARIA Example</h3>
+
+                  <form role="search">
+
+                  <input type="search" size="20" aria-label="search text"><input type="submit" value="Search">
+
+                  </form>
+
                   <div class="code">
-                    &lt;div <strong>role="search"</strong>&gt;
+                    &lt;form <strong>role="search"</strong>&gt;
                     <br>
                     <br>
                     &nbsp;&nbsp;&lt;input type="search" aria-label="search text" size="20"&gt;
                     <br>
                     <br>
-                    &nbsp;&nbsp;&lt;input type="submit" value="start search"&gt;
+                    &nbsp;&nbsp;&lt;input type="submit" value="Search""&gt;
                     <br>
                     <br>
-                    &lt;/div&gt;
+                    &lt;/form&gt;
                     <br>
                   </div>
                </div>
-                <div role="tabpanel" class="tab-pane" id="html5-techniques">
+                <div id="tabpanel2" aria-labelledby="tab2" role="tabpanel" class="tab-pane">
                   <p>There is no HTML5 element that defines a <code>search</code> landmark.</p>
                 </div>
               </div>
-            </div>
+            </section>
           </main>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
@@ -90,24 +99,25 @@
             <p>The following are landmarks defined on the page:</p>
             <ul>
               <li>Banner</li>
-              <li>Navigation</li>
-              <li>Complementary(3)</li>
-              <li>Main</li>
+              <li>Complementary</li>
               <li>Contentinfo</li>
+              <li>Main</li>
+              <li>Navigation</li>
+              <li>Region</li>
+              <li>Search</li>
             </ul>
-            <p id="highlight_inst" class="inst">Visually outline the landmarks and/or headings on the page using the following buttons.</p>
-            <button onclick="showLandmarks(event)" aria-describedby="highlight_inst">Show Landmarks</button>
-            <button onclick="showHeadings(event)" aria-describedby="highlight_inst">Show Headings</button>
           </aside>
           <aside aria-labelledby="id3">
             <h2 id="id3">Related W3C Specs</h2>
             <ul>
-              <li><a href="http://www.w3.org/TR/WCAG">WCAG 2.0</a></li>
-              <li><a href="http://www.w3.org/TR/html5">HTML5</a></li>
-              <li><a href="http://www.w3.org/TR/wai-aria">ARIA</a></li>
+              <li><a href="http://www.w3.org/TR/WCAG">WCAG 2.0 Specification</a></li>
+              <li><a href="http://www.w3.org/TR/html5">HTML5 Specification</a></li>
+              <li><a href="http://www.w3.org/TR/wai-aria">ARIA Specification</a></li>
               <li><a href="https://www.w3.org/TR/wai-aria-practices/">ARIA Authoring Practices</a></li>
               <li><a href="https://www.w3.org/TR/accname-aam-1.1/">ARIA Accessible Name Calc</a></li>
               <li><a href="https://www.w3.org/TR/aria-in-html/">ARIA in HTML5</a></li>
+              <li><a href="https://www.w3.org/TR/2016/WD-core-aam-1.1-20160317/">Core Accessibility API Mappings 1.1</a></li>
+              <li><a href="https://www.w3.org/TR/html-aam-1.0/">HTML Accessibility API Mappings 1.0</a></li>
             </ul>
           </aside>
         </div>
@@ -125,7 +135,8 @@
     </div>
     <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>        
     <script type="text/javascript" src="js/bootstrap.min.js"></script>        
-    <script type="text/javascript" src="js/bootstrap-accessibility.min.js"></script>        
+    <script type="text/javascript" src="js/bootstrap-accessibility.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap-accessibility-2.js"></script>       
     <script type="text/javascript" src="js/visua11y.js"></script>        
     <script type="text/javascript" src="js/show.js"></script>        
     <script type="text/javascript" >
@@ -134,7 +145,8 @@
       {
         "settings": {
           "skipTo": {
-            "headings": "h1, h2"
+            "headings": "h1, h2",
+            "attachElement": "header"
           }
         }
       };
