--- a/examples/landmarks/complementary.html
+++ b/examples/landmarks/complementary.html
@@ -6,10 +6,8 @@
     <link href="css/bootstrap.css" rel="stylesheet" media="screen"/>
     <link href="css/bootstrap-theme.css" rel="stylesheet" media="screen"/>
     <link href="css/bootstrap-accessibility.css" rel="stylesheet" media="screen"/>
-    <link href="css/bootstrap-accessibility.css" rel="stylesheet" media="screen"/>
     <link href="css/visua11y.css" rel="stylesheet" media="screen"/>
     <link href="css/common.css" rel="stylesheet" media="screen"/>
-    <script src="js/tabs.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="container">
@@ -56,7 +54,7 @@
               <li>If a page includes more than one <code>complementary</code> landmark, each should have a unique label.</li>
             </ul>
             <section aria-label="Coding Techniques">
-              <ul class="nav nav-tabs" role="tablist">
+              <ul id="myTabs" class="nav nav-tabs" role="tablist">
                 <li class="active">
                   <a id="tab1" href="#tabpanel1" aria-controls="tabpanel1" role="tab" data-toggle="tab">ARIA Techniques</a>
                 </li>
@@ -203,6 +201,7 @@
     </div>
     <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>        
     <script type="text/javascript" src="js/bootstrap.min.js"></script>        
+    <script type="text/javascript" src="js/tabs.js"></script>        
     <script type="text/javascript" src="js/bootstrap-accessibility.min.js"></script>
     <script type="text/javascript" src="js/bootstrap-accessibility-2.js"></script>       
     <script type="text/javascript" src="js/visua11y.js"></script>        
