--- a/examples/landmarks/HTML5.html
+++ b/examples/landmarks/HTML5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html >
 <html lang="en">
   <head>
-    <title>General Principles: Principles: ARIA Landmarks Example</title>
+    <title>HTML5 Sectioning Elements: ARIA Landmarks Example</title>
     <meta charset="utf-8">
     <link href="css/bootstrap.css" rel="stylesheet" media="screen"/>
     <link href="css/bootstrap-theme.css" rel="stylesheet" media="screen"/>
