--- a/examples/landmarks/navigation.html
+++ b/examples/landmarks/navigation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html >
 <html lang="en">
   <head>
-    <title>ARIA Landmark Example: Design Patterns</title>
+    <title>Navigation Landmark: ARIA Landmark Example</title>
     <meta charset="utf-8">
     <link href="css/bootstrap.css" rel="stylesheet" media="screen"/>
     <link href="css/bootstrap-theme.css" rel="stylesheet" media="screen"/>
@@ -16,7 +16,7 @@
           <img src="images/w3c.png" alt="W3C Logo" />
         </div>
         <div class="col-xs-12 col-sm-9 col-md-9 col-lg-10">
-          <h1>ARIA Landmark Example using HTML5 Sectioning Elements</h1>
+          <h1>ARIA Landmark Example</h1>
           <p id="inst" class="inst">Visually outline the landmarks and/or headings on the page using the following buttons.</p>
           <button onclick="showLandmarks(event)" aria-describedby="inst">Show Landmarks</button>
           <button onclick="showHeadings(event)"  aria-describedby="inst">Show Headings</button>
